--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@ h1, h2, body {
 }
 
 .App {
-  text-align: center;
   color: #002e5c;
 }
 
@@ -14,43 +13,52 @@ h1, h2, body {
 
 .App-header {
   background-color: #f6fcff;
+  display: flex;
+  justify-content: space-between;
   padding-left: 10px;
-  text-align: left;
+  border-bottom: 1px solid #c3ebff;
 }
 
 .App-header a {
   text-decoration: none;
 }
 
-.App-header p {
-  -webkit-margin-after: 0.5em;
-  -webkit-margin-end: 0px;
-}
-
-.App-header h1 {
-  margin-bottom: 20px;
-  -webkit-margin-before: 0px;
-  -webkit-margin-after: 0px;
-  -webkit-margin-start: 0px;
-  -webkit-margin-end: 0px;
+.App-title-container {
+  display: inline-block;
+  margin-left: 10px;
+  vertical-align: top;
+  padding-top: 10px;
 }
 
 .App-title {
-  vertical-align: top;
-  padding-left: 13px;
-  padding-top: 8px;
   font-size: 2em;
   font-weight: lighter;
-  display: inline-block;
   color: #4077a5;
-  margin-top: 0px;
+  margin: 0px;
 }
 
 .App-intro {
   font-size: 1em;
-  margin-left: 93px;
-  margin-top: -35px;
   color: #4077a5;
-  text-align: left;
   font-weight: lighter;
+}
+
+#skip a {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+@media (max-width: 365px) {
+  .App-logo {
+    width: 60px;
+    height: 45px;
+    padding-top: 15px;
+  }
+  .App-title {
+    font-size: 1.5em;
+  }
 }
