Add optional LangSwitcher functionality

--- a/src/LangSwitcher.css
+++ b/src/LangSwitcher.css
@@ -36,6 +36,20 @@
 
 .LangSwitcher-dropdown .show {display: block;}
 
+.LangSwitcher-dropdown i {
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    display: inline-block;
+    padding: 3px;
+    margin-left: 4px;
+    margin-bottom: 3px;
+}
+
+.LangSwitcher-dropdown .arrow-down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+}
+
 @media screen and (max-width: 600px) {
     .LangSwitcher-dropdown .dropbtn {
         background-color: #3498DB;
