--- a/src/LangSwitcher.css
+++ b/src/LangSwitcher.css
@@ -1,62 +1,25 @@
-.LangSwitcher-dropdown .dropbtn {
-    background-color: #3498DB;
-    color: white;
-    border: none;
-    cursor: pointer;
-    width: 80px;
-    height: 100%;
+.LangSwitcher-dropdown {
+  border: 1px solid transparent;
+  width: 90px;
 }
 
-.LangSwitcher-dropdown .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
+.LangSwitcher-dropdown {
+  padding-top: 30px;
 }
 
-.LangSwitcher-dropdown .dropdown {
-    position: relative;
-    display: inline-block;
+.LangSwitcher-dropdown select {
+  background-color: #f6fcff;
+  color: #004a87;
+  border: none;
+  font-size: 17px;
 }
 
-.LangSwitcher-dropdown .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+.LangSwitcher-dropdown select:focus {
+  border: 1px solid blue;
 }
 
-.LangSwitcher-dropdown .dropdown-content a {
+.LangSwitcher-dropdown option {
+    background-color: #f6fcff;
     color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.LangSwitcher-dropdown .dropdown-content a:hover {background-color: #ddd;}
-
-.LangSwitcher-dropdown .show {display: block;}
-
-.LangSwitcher-dropdown i {
-    border: solid white;
-    border-width: 0 2px 2px 0;
-    display: inline-block;
-    padding: 3px;
-    margin-left: 4px;
-    margin-bottom: 3px;
-}
-
-.LangSwitcher-dropdown .arrow-down {
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-}
-
-@media screen and (max-width: 600px) {
-    .LangSwitcher-dropdown .dropbtn {
-        background-color: #3498DB;
-        color: white;
-        border: none;
-        cursor: pointer;
-        min-width: 60px;
-        height: 100%;
-    }
+    height: 100px;
 }
