--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -13,7 +13,16 @@
     padding-top: 30px;
     text-decoration: none;
     font-size: 17px;
-    height: 100%;
+    height: 54px;
+    border: 1px solid transparent;
+}
+
+.Navbar-nav a:nth-last-of-type(1) {
+    padding-top: 25px;
+}
+
+.Navbar-nav a:focus {
+    border: 1px solid blue;
 }
 
 .Navbar-nav a:hover {
@@ -24,6 +33,10 @@
 .Navbar-nav .active {
     background-color: #004a87;
     color: white;
+}
+
+.Navbar-nav .active:focus {
+    border: 1px solid #00fff3;
 }
   
 .Navbar-nav .icon {
@@ -44,7 +57,7 @@
     .Navbar-nav a.icon {
         float: right;
         display: block;
-        margin-top: -10px;
+        /* margin-top: -10px; */
     }
 }
   
@@ -53,7 +66,7 @@
         position: absolute;
         background-color: #f6fcff;
         top: 0;
-        right: 80px;
+        right: 90px;
     }
     .Navbar-nav.responsive .icon {
         position: absolute;
@@ -62,13 +75,10 @@
         padding-bottom: 10px;
     }
     .Navbar-nav.responsive a:first-of-type {
-        margin-top: 42px;
+        margin-top: 85px;
     }
     .Navbar-nav.responsive a {
         border: 1px solid #c3ebff;
-    }
-    .Navbar-nav.responsive a:nth-last-of-type(1) {
-        border: none;
     }
     .Navbar-nav.responsive a {
         float: none;
@@ -76,5 +86,8 @@
         text-align: left;
         height: 29px;
         padding-top: 13px;
+    }
+    .Navbar-nav.responsive a:nth-last-of-type(1) {
+        border: none;
     }
 }
