--- a/src/template/styles/components/Navbar.css
+++ b/src/template/styles/components/Navbar.css
@@ -26,7 +26,7 @@
 }
 
 .Navbar-nav a:focus {
-    border: 1px solid blue;
+    border: 1px solid #c3ebff;
 }
 
 .Navbar-nav a:hover {
@@ -36,7 +36,7 @@
 .Navbar-nav .active {
     background-color: #99ddff;
 }
-  
+
 .Navbar-nav .icon {
     display: none;
 }
@@ -73,7 +73,7 @@
 }
 
 .Navbar-nav.hamburger button.Navbar-dropdown-toggle:focus {
-    border: 1px solid blue;
+    border: 1px solid #c3ebff;
 }
 
 .Navbar-nav.hamburger button.Navbar-dropdown-toggle:hover {
