Make footer push mobile friendly with flex

--- a/src/template/styles/components/App.css
+++ b/src/template/styles/components/App.css
@@ -7,6 +7,9 @@ h1, h2, body {
 
 .App {
   color: #002e5c;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
 .App-header {
@@ -24,4 +27,8 @@ h1, h2, body {
 
 .App-header a:focus {
   border: 1px solid #c3ebff;
+}
+
+main {
+  flex: 1;
 }
