Default spacing for main

--- a/src/app/styles/styles.css
+++ b/src/app/styles/styles.css
@@ -7,6 +7,10 @@ html, body {
   overflow-y: scroll;
 }
 
+main {
+  margin: 2vh 15vw;
+}
+
 h1 {
   /* color: red; */ /*Don't actually make this red... */
 }
