Style language switcher

--- a/src/template/styles/components/LangSwitcher.css
+++ b/src/template/styles/components/LangSwitcher.css
@@ -6,16 +6,14 @@
   width: 90px;
 }
 
-.LangSwitcher-dropdown {
-  padding-top: 30px;
-}
-
 .LangSwitcher-dropdown select {
   background-color: #f6fcff;
   color: #325d81;
   border: none;
   font-size: 17px;
   font-weight: lighter;
+  height: 100%;
+  border: 1px solid transparent;
 }
 
 .LangSwitcher-dropdown select:hover {
