--- a/src/template/styles/components/Navbar.css
+++ b/src/template/styles/components/Navbar.css
@@ -20,30 +20,24 @@
 .Navbar-nav  li {
   display: inline-block;
   height: 100%;
-  font-size: 17px;
+  font-size: 1rem;
 }
 
 .Navbar-nav li a, .Navbar-nav li .LangSwitcher-dropdown {
-  /* height: 100%; */
-  padding: 2em;
-}
-
-.Navbar-nav a {
-  /* float: left;
+  padding: 1.75em;
   font-weight: lighter;
-  display: block;
   color: #325d81;
-  text-align: center;
   text-decoration: none;
-  height: 100%;
-  border: 1px solid transparent; */
+  border: 1px solid transparent;
 }
 
 .Navbar-nav a:focus {
   border: 1px solid #c3ebff;
 }
 
-.Navbar-nav a:hover {
+.Navbar-nav a:hover,
+.Navbar-nav li .LangSwitcher-dropdown:hover,
+.Navbar-nav li .LangSwitcher-dropdown:hover select {
   background-color: #d6dee4;
 }
 
@@ -77,7 +71,7 @@
   padding-right: 16px;
   padding-left: 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 1rem;
   height: 54px;
 }
 
