--- a/src/template/styles/components/LangSwitcher.css
+++ b/src/template/styles/components/LangSwitcher.css
@@ -11,4 +11,21 @@
   font-size: inherit;
   border-radius: 0px;
   width: 100%;
+  margin-right: 0.75em;
+}
+
+.LangSwitcher-dropdown:after {
+  content: '';
+  width: 0;
+  height: 0;
+  border-left: 0.35em solid transparent;
+  border-right: 0.35em solid transparent;
+  border-top: 0.35em solid #325d81;
+
+  /*Adjust for position however you want*/
+  right: 1.65em;
+  top: 2.25em;
+  padding: 0 0 2px;
+  position: absolute;
+  pointer-events: none;
 }
