--- a/src/template/styles/components/Navbar.css
+++ b/src/template/styles/components/Navbar.css
@@ -13,7 +13,6 @@
 .Navbar-nav ul {
   list-style: none;
   margin: 0;
-  padding: 0;
 }
 
 .Navbar-nav  li {
@@ -28,7 +27,6 @@
   appearance: none;
   font-size: inherit;
   background-color: inherit;
-  width: 100%;
 }
 
 .Navbar-nav li a, .Navbar-nav li select {
@@ -71,11 +69,11 @@
 }
 
 .Navbar-nav.open .Navbar-dropdown-menu {
-  display: block;
+  display: inline-block;
 }
 
 .Navbar-dropdown-toggle[aria-expanded="true"] + .Navbar-dropdown-menu {
-  display: block;
+  display: inline-block;
 }
 
 /* So no conflicts with Bootstrap */
@@ -126,10 +124,11 @@
 
 .Navbar-nav.hamburger a, .Navbar-nav.hamburger select {
   float: none;
-  display: block;
+  display: inline-block;
   text-align: left;
   padding: 1em;
   background-color: #f6fcff;
+  width: 100%;
 }
 
 .Navbar-nav.hamburger a.active {
