--- a/src/template/styles/components/Navbar.css
+++ b/src/template/styles/components/Navbar.css
@@ -8,6 +8,12 @@
 
 .Navbar-nav {
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  text-align: center;
 }
 
 .Navbar-nav ul {
@@ -89,6 +95,7 @@
 .Navbar-nav.hamburger ul {
   position: absolute;
   right: 0;
+  top: 0;
   z-index: 1000;
   margin-top: 58px;
 }
