Add beta indicator

--- a/src/template/styles/components/AppTitle.css
+++ b/src/template/styles/components/AppTitle.css
@@ -14,6 +14,14 @@
   margin: 2px;
 }
 
+.AppTitle-title #beta-indicator {
+  margin-left: 1rem;
+  padding: 0 1rem;
+  background-color: purple;
+  color: white;
+  border-radius: 8px;
+}
+
 .AppTitle-title:focus {
   border: 1px solid blue;
 }
