Almost space title nicely on mobile

--- a/src/template/styles/components/AppTitle.css
+++ b/src/template/styles/components/AppTitle.css
@@ -1,5 +1,6 @@
 .AppTitle-wrapper-link {
   padding: 0.5rem 0 0 0.5rem;
+  white-space: nowrap;
 }
 
 .AppTitle-logo {
@@ -12,10 +13,15 @@
   font-weight: lighter;
   color: #325d81;
   margin: 2px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.AppTitle-title span {
+  flex: 1 1 auto;
 }
 
 .AppTitle-title #beta-indicator {
-  margin-left: 1rem;
   padding: 0 1rem;
   background-color: purple;
   color: white;
