--- a/src/template/styles/components/Navbar.css
+++ b/src/template/styles/components/Navbar.css
@@ -4,13 +4,14 @@
 .Navbar-container {
   display: flex;
   flex-wrap: wrap;
+  flex: 1 0 auto;
 }
 
 .Navbar-nav {
   overflow: hidden;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-end;
+  justify-content: flex-end;
   flex-direction: column;
   width: 100%;
   text-align: center;
@@ -19,6 +20,7 @@
 .Navbar-nav ul {
   list-style: none;
   margin: 2px 2px 2px 5px;
+  white-space: nowrap;
 }
 
 .Navbar-nav  li {
